# macro-pricer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: first.ipynb
valuation/: __init__.py  dataset.py  features.py  plots.py
valuation/modeling/: predict.py  train.py
