[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "macro_pricer"
version = "0.0.1"
description = "Macroeconomic property valuation. Continuous ingestion, strict validation, deterministic output."
authors = [
  { name = "Vishesh Kathuria" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "jinja2>=3.1.6",
    "loguru",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"

[tool.flit.module]
name = "valuation"

[tool.ruff]
line-length = 99
src = ["valuation"]
include = ["pyproject.toml", "valuation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["valuation"]
force-sort-within-sections = true
